2009-12-07  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/include/libxnee/xnee.h (struct): 
	More fine grained storage of X version number
	added: x_version_minor_sub	

	* libxnee/src/xnee_record.c (xnee_record_async): 
	Flushing and syncing displays after record contect creation
	Checking if X > Xorg 1.6.0 to choose display to use in 
	EnableAsync call
	Recording is now done with XRecordEnableContextAsync

	* libxnee/src/xnee_session.c (xnee_set_x_server_version): 
	More fine grained storage of X version number

2009-11-23  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/test/print.c: 
	Removing adding of non default displays to distribution test
	to let nightly test work better with Xvfb

	* libxnee/test/Makefile.am
	Removing shared lib for bins
	(Xvfb): Adding sleep to make Xvfb starts up before proceeding

	* configure.in: 
	Removing debug sleep

2009-11-22  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/src/xnee_session.c (xnee_set_x_server_version): 
	Added check for display
	Needed for nightly builds without X server up

2009-11-01  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/src/xnee_resource.c (xnee_parse_option_impl): 
	Added check if NULL ptr when verbose printing
	(xnee_key2string): 
	Added check if NULL ptr when verbose printing

	* libxnee/src/xnee_record.c (xnee_has_record_extension): 
	Adding note that missing RECORD extension is not an Xnee error

2009-06-17  Henrik Sandklef  <hesa@korngold.sandklef.com>

	* libxnee/src/print.c (xnee_print_xnee_settings): 
	Fixed seg fault 

2009-05-27  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/src/xnee_range.c: 
	call xnee_set_x_server_version if info not there

	* libxnee/src/xnee_record.c: 
	Creating record context on control display

	* libxnee/src/xnee_session.c: 
	Added some logic debugging code

	* libxnee/test/libtest.c (test_xnee_data): 
	Test updates

	* libxnee/include/libxnee/xnee.h: 
	Added variables (to xnee_data) to store 
        x server info from the display
	Updated (c) year
	