@@ -812,6 +812,16 @@ xnee_record_from_data_display(xnee_data *xd)
 	      ret_val = 1;
 	    }
 	}
+      else if (strstr(xd->x_vendor_name, "Sun Microsystems") )
+	{
+	  
+	  if ( ( xd->x_version_major == 1 ) &&
+	       ( xd->x_version_minor >= 3 ) )
+	    {
+	      ret_val = 1;
+	    }
+	}
+
     }
   
   return ret_val;
